; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_host.c_is_phy_starting.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_host.c_is_phy_starting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isci_phy = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.isci_phy*)* @is_phy_starting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_phy_starting(%struct.isci_phy* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.isci_phy*, align 8
  %4 = alloca i32, align 4
  store %struct.isci_phy* %0, %struct.isci_phy** %3, align 8
  %5 = load %struct.isci_phy*, %struct.isci_phy** %3, align 8
  %6 = getelementptr inbounds %struct.isci_phy, %struct.isci_phy* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %11 [
    i32 138, label %10
    i32 128, label %10
    i32 134, label %10
    i32 137, label %10
    i32 135, label %10
    i32 132, label %10
    i32 133, label %10
    i32 131, label %10
    i32 136, label %10
    i32 130, label %10
    i32 129, label %10
  ]

10:                                               ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
